[package]
name = "ofs-controller"
version = "0.1.0"
authors = ["Christopher Miller <admin@mctherealm.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"

[dependencies.linked_list_allocator]
default-features = false
version = "0.8.11"
features = ["const_mut_refs"]

[dependencies.avr-device]
version = "0.3.1"
features = ["atmega328p", "rt"]

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
